<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"

    android:padding="10dp" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addidnum"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/nameIdent"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:hint="@string/id"
        android:textColor="@color/white"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/sizeIdent"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:hint="@string/countchar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="Autofill">
    </EditText>

</LinearLayout>
